# WaveRace64-Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
recomp/: overlays.us.rev1.txt  waverace64.toml  waverace64.us.rev1.syms.toml
scripts/: auto_split_functions.py  find_missing_jal_targets.py  generate_symbols.py
src/: audio.cpp  audio.h  input.cpp  input.h  main.cpp  os_stubs.cpp  rsp_microcode.cpp  rsp_microcode.h  rt64_render_context.cpp  rt64_render_context.h
